--- a/local.properties
+++ b/local.properties
@@ -4,5 +4,5 @@
 # Location of the SDK. This is only used by Gradle.
 # For customization when using a Version Control System, please read the
 # header note.
-#Sat Jun 13 16:51:07 ICT 2020
-sdk.dir=C\:\\Users\\Samsung\\AppData\\Local\\Android\\Sdk
+#Mon Jun 15 15:27:12 ICT 2020
+sdk.dir=D\:\\Kuliah\\SDK
