--- a/local.properties
+++ b/local.properties
@@ -4,5 +4,5 @@
 # Location of the SDK. This is only used by Gradle.
 # For customization when using a Version Control System, please read the
 # header note.
-#Mon Jun 15 20:07:20 ICT 2020
-sdk.dir=C\:\\Users\\Samsung\\AppData\\Local\\Android\\Sdk
+#Wed Jun 17 09:16:31 ICT 2020
+sdk.dir=D\:\\Kuliah\\SDK
