--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -12,7 +12,8 @@
         android:supportsRtl="true"
         android:theme="@style/AppTheme"
         android:usesCleartextTraffic="true">
-        <activity android:name=".notification"></activity>
+        <activity android:name=".Ubah_stockban"></activity>
+        <activity android:name=".notification" />
         <activity android:name=".Informasi_stoksuspensi" />
         <activity android:name=".SuspensiActivity" />
         <activity android:name=".Tambah_stockban" />
