--- a/local.properties
+++ b/local.properties
@@ -4,7 +4,5 @@
 # Location of the SDK. This is only used by Gradle.
 # For customization when using a Version Control System, please read the
 # header note.
-
-#Wed Jun 17 09:16:31 ICT 2020
-sdk.dir=D\:\\Kuliah\\SDK
-
+#Thu Jun 18 10:38:20 ICT 2020
+sdk.dir=C\:\\Users\\Goldy\\AppData\\Local\\Android\\Sdk
