--- a/local.properties
+++ b/local.properties
@@ -4,5 +4,5 @@
 # Location of the SDK. This is only used by Gradle.
 # For customization when using a Version Control System, please read the
 # header note.
-#Thu Jun 18 10:38:20 ICT 2020
-sdk.dir=C\:\\Users\\Goldy\\AppData\\Local\\Android\\Sdk
+#Thu Jun 18 12:43:11 ICT 2020
+sdk.dir=C\:\\Users\\Samsung\\AppData\\Local\\Android\\Sdk
