--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -12,14 +12,12 @@
         android:supportsRtl="true"
         android:theme="@style/AppTheme"
         android:usesCleartextTraffic="true">
-
-        <activity android:name=".Ubah_stocksuspensi"></activity>
+        <activity android:name=".Ubah_stockvelg"></activity>
+        <activity android:name=".Ubah_stocksuspensi" />
         <activity android:name=".Tambah_stocksuspensi" />
-
-        <activity android:name=".Tambah_stokvelg"></activity>
+        <activity android:name=".Tambah_stokvelg" />
         <activity android:name=".Informasi_stokvelg" />
         <activity android:name=".VelgActivity" />
-
         <activity android:name=".Ubah_stockban" />
         <activity android:name=".notification" />
         <activity android:name=".Notification" />
