--- a/local.properties
+++ b/local.properties
@@ -4,5 +4,5 @@
 # Location of the SDK. This is only used by Gradle.
 # For customization when using a Version Control System, please read the
 # header note.
-#Fri Jun 19 13:39:48 ICT 2020
-sdk.dir=D\:\\Kuliah\\SDK
+#Sat Jun 20 17:41:31 ICT 2020
+sdk.dir=C\:\\Users\\Goldy\\AppData\\Local\\Android\\Sdk
